[tool.poetry]
name = "step-by-step-dbt-duckdb"
version = "0.1.0"
description = "A step by step dtb with Duckdb project."
authors = ["Fabio Simoes <fabio.simoes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
dbt-duckdb = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
